<resources>
    <string name="app_name">CZ2006</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EzMeet</string>
    <string name="nav_header_subtitle">Good Morning!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_meet">Meet</string>
    <string name="menu_spaceout">Space Out</string>
    <string name="menu_covidsitrep">Covid Sit Rep</string>
    <string name="menu_busarrival">Bus Arrival</string>
    <string name="menu_trainservice">Train Service Alerts</string>
    <string name="menu_guide">Guide</string>
    <string name="title_activity_dummy">dummy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="search">Search ....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings for bottom sheet-->
    <string name="postal_code">Postal Code</string>
    <string name="search_places">Where to?</string>

</resources>