<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_meet">

    <fragment
        android:id="@+id/nav_meet"
        android:name="com.example.cz2006.ui.meet.MeetFragment"
        android:label="@string/menu_meet"
        tools:layout="@layout/fragment_meet" />

    <fragment
        android:id="@+id/nav_spaceout"
        android:name="com.example.cz2006.ui.spaceout.SpaceoutFragment"
        android:label="@string/menu_spaceout"
        tools:layout="@layout/fragment_spaceout" />

    <fragment
        android:id="@+id/nav_busarrival"
        android:name="com.example.cz2006.ui.busarrival.BusarrivalFragment"
        android:label="@string/menu_busarrival"
        tools:layout="@layout/fragment_busarrival" />

    <fragment
        android:id="@+id/nav_trainservice"
        android:name="com.example.cz2006.ui.trainservice.TrainServiceFragment"
        android:label="@string/menu_trainservice"
        tools:layout="@layout/fragment_train" />

    <fragment
        android:id="@+id/nav_guide"
        android:name="com.example.cz2006.ui.guide.GuideFragment"
        android:label="@string/menu_guide"
        tools:layout="@layout/fragment_guide" />
</navigation>