<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_meet"
            android:icon="@drawable/ic_baseline_person_pin_circle_24"
            android:title="@string/menu_meet" />
        <item
            android:id="@+id/nav_spaceout"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_covidsitrep" />
        <item
            android:id="@+id/nav_busarrival"
            android:icon="@drawable/ic_baseline_directions_bus_24"
            android:title="@string/menu_busarrival" />
        <item
            android:id="@+id/nav_trainservice"
            android:icon="@drawable/ic_baseline_train_24"
            android:title="@string/menu_trainservice" />

    </group>
</menu>